--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,5 +2,5 @@ spring.application.name=productivity-backend
 spring.data.mongodb.uri=mongodb+srv://adimohapatra13:bimpZY5kc6Cd77g1@cluster1.fdldsor.mongodb.net/TodoBackend?retryWrites=true&w=majority&ssl=true
 #spring.data.mongodb.auto-index-creation=true
 logging.level.org.springframework.security=DEBUG
-server.ssl.enabled=true
+server.ssl.enabled=false
 jdk.tls.client.protocols=TLSv1.2
